--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "husky": "^8.0.3",
-    "lucide-react": "^0.292.0",
-    "next": "14.0.3",
-    "openai": "^4.19.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
+    "husky": "^9.0.11",
+    "lucide-react": "^0.354.0",
+    "next": "14.1.3",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.0.0",
+    "react-to-print": "^2.15.1",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -41,18 +44,18 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/parser": "^7.1.1",
     "autoprefixer": "^10",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "14.0.2",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "lint-staged": "^15.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-tailwindcss": "^3.14.3",
+    "lint-staged": "^15.2.2",
     "postcss": "^8",
-    "prettier": "^3.1.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
